[gd_scene load_steps=6 format=2]

[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Resource/Font/micross.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://SanitisedTextEdit/SanitisedTextEdit.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.713726, 0.470588, 0.74902, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 984.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Personal Lobby"
align = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 984.0
margin_bottom = 97.0

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 401.0
margin_right = 490.0
margin_bottom = 35.0
size_flags_horizontal = 10
custom_colors/font_color = Color( 0.0352941, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Name:"

[node name="NameTextEdit" parent="VBoxContainer/HBoxContainer4" instance=ExtResource( 3 )]
margin_left = 494.0
margin_top = 0.0
margin_right = 694.0
margin_bottom = 35.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 101.0
margin_right = 984.0
margin_bottom = 136.0

[node name="IPAddressLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 335.0
margin_right = 490.0
margin_bottom = 35.0
size_flags_horizontal = 10
custom_colors/font_color = Color( 0.0352941, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "IP Address:"

[node name="IPAddressTextEdit" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 494.0
margin_top = 0.0
margin_right = 694.0
margin_bottom = 35.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 984.0
margin_bottom = 175.0

[node name="PortLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 427.0
margin_right = 490.0
margin_bottom = 35.0
size_flags_horizontal = 10
custom_colors/font_color = Color( 0.0352941, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Port:"

[node name="PortTextEdit" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 3 )]
margin_left = 494.0
margin_top = 0.0
margin_right = 694.0
margin_bottom = 35.0
MAX_CHARACTERS = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 179.0
margin_right = 984.0
margin_bottom = 199.0

[node name="HostButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 390.0
margin_right = 490.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 10
size_flags_vertical = 4
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 494.0
margin_right = 594.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 2
text = "Join Game"

[connection signal="text_changed" from="VBoxContainer/HBoxContainer4/NameTextEdit" to="." method="_on_NameTextEdit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/IPAddressTextEdit" to="." method="_on_IPAddressTextEdit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer2/PortTextEdit" to="." method="_on_PortTextEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/HostButton" to="." method="_on_HostButton_pressed"]
